<resources>
    <string name="app_name">Desafio-Mobile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Bottom Navigation View icon text -->
    <string name="store_bottom_nav_view">Loja</string>
    <string name="cart_bottom_nav_view">Carrinho</string>
    <string name="transactions_bottom_nav_view">Transações</string>

    <!-- Fragment tags -->
    <string name="tag_store_fragment">store_tag</string>
    <string name="tag_cart_fragment">cart_tag</string>
    <string name="tag_transactions_fragment">transactions_tag</string>

    <!-- Actionbar -->
    <string name="actionbar_store">Loja</string>
    <string name="actionbar_cart">Carrinho</string>
    <string name="actionbar_transactions">Transações</string>

    <!-- Feedback -->
    <string name="store_loading">Carregando loja…</string>
    <string name="store_error">Ops, houve um problema ao carregar a loja :(</string>
    <string name="store_added_item_to_cart">Item adicionado ao carrinho!</string>
    <string name="cart_empty">Não há itens no carrinho</string>
    <string name="cart_removed_item_from_cart">Item removido do carrinho!</string>
    <string name="transactions_empty">Não há transações</string>

    <!-- Store item -->
    <string name="store_item_button"><s>ADICIONAR AO CARRINHO</s></string>
    <string name="store_item_title"><s>Título</s></string>
    <string name="store_item_seller"><s>Vendedor</s></string>
    <string name="store_item_price"><s>Preço</s></string>

    <!-- Cart item -->
    <string name="cart_item_button"><s>REMOVER DO CARRINHO</s></string>
    <string name="cart_item_title"><s>Título</s></string>
    <string name="cart_item_seller"><s>Vendedor</s></string>
    <string name="cart_item_price"><s>Preço</s></string>

    <!-- Transaction item -->
    <string name="transaction_value"><s>valor</s></string>
    <string name="transaction_card_name"><s>nome</s></string>
    <string name="transaction_card_number"><s>número do cartão</s></string>
    <string name="transaction_hour"><s>hora</s></string>
    <string name="transaction_date"><s>data</s></string>

    <!-- Payment Dialog -->
    <string name="payment_dialog_title"><s>Finalizar pagamento no valor de</s></string>
    <string name="payment_value">Valor</string>
    <string name="payment_card_number">Número do cartão (16 digitos)</string>
    <string name="payment_card_number_tip">XXXX XXXX XXXX XXXX</string>
    <string name="payment_card_name">Nome Completo</string>
    <string name="payment_card_name_tip">nome</string>
    <string name="payment_card_cvv">CVV (código na parte traseira)</string>
    <string name="payment_card_cvv_tip">cvv</string>
    <string name="payment_card_exp_date">Vencimento do cartão</string>
    <string name="payment_card_exp_date_tip">vencimento</string>
    <string name="payment_confirm">Finalizar</string>
    <string name="payment_cancel">Cancelar</string>
</resources>
