<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/colorblack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="20dp"
            android:scaleType="center"
            android:text="@string/payment_card_number" />

        <EditText
            android:id="@+id/cardNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:hint="@string/payment_card_number_tip"
            android:inputType="number"
            android:maxLength="16" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="20dp"
            android:scaleType="center"
            android:text="@string/payment_card_name" />

        <EditText
            android:id="@+id/cardNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:fontFamily="sans-serif"
            android:hint="@string/payment_card_name_tip"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="20dp"
            android:scaleType="center"
            android:text="@string/payment_card_cvv" />

        <EditText
            android:id="@+id/cardCVVEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:fontFamily="sans-serif"
            android:hint="@string/payment_card_cvv_tip"
            android:inputType="number"
            android:maxLength="3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="20dp"
            android:scaleType="center"
            android:text="@string/payment_card_exp_date" />

        <EditText
            android:id="@+id/cardExpDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:fontFamily="sans-serif"
            android:hint="@string/payment_card_exp_date_tip"
            android:inputType="date"
            android:maxLength="5" />

    </LinearLayout>

</ScrollView>