<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorgrey2"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:id="@+id/transactionValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/transaction_value"
            android:textColor="@color/colorgrey5"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/transactionNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/transaction_card_name"
                android:textColor="@color/colorgrey5"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/transactionCardTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/transaction_card_number"
                android:textColor="@color/colorgrey5"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/transactionHourTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/transaction_hour"
                android:textColor="@color/colorgrey5"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/transactionDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/transaction_date"
                android:textColor="@color/colorgrey5"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>