<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorblack"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="1dp"
    android:paddingTop="1dp" android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorgrey5"
        android:orientation="horizontal"
        android:padding="6dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:gravity="center"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:textColor="@color/colorActionbar"
                android:textSize="18sp"
                tools:text="@string/store_item_title" />

            <TextView
                android:id="@+id/seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorgrey3"
                android:textSize="12sp"
                tools:text="@string/store_item_seller" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="7dp"
                android:textColor="@color/colorwhite"
                android:textSize="15sp"
                tools:text="@string/store_item_price" />

            <Button
                android:id="@+id/add_to_cart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorgrey2"
                android:text="@string/store_item_button" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>